--- a/index.html
+++ b/index.html
@@ -157,14 +157,14 @@
     <section id="gallery" class="fade-in">
       <h2>Galeri Sekolah</h2>
       <div class="gallery">
-        <img src="logo.png" alt="Gallery 1">
-        <img src="logo.png" alt="Gallery 2">
-        <img src="logo.png" alt="Gallery 3">
-        <img src="logo.png" alt="Gallery 4">
-        <img src="logo.png" alt="Gallery 5">
-        <img src="logo.png" alt="Gallery 6">
-        <img src="logo.png" alt="Gallery 7">
-        <img src="logo.png" alt="Gallery 8">
+        <img src="1.jpg" alt="Gallery 1">
+        <img src="2.jpg alt="Gallery 2">
+        <img src="3.jpg" alt="Gallery 3">
+        <img src="4.jpg" alt="Gallery 4">
+        <img src="5.jpg" alt="Gallery 5">
+        <img src="6.jpg" alt="Gallery 6">
+        <img src="7.jpg" alt="Gallery 7">
+        <img src="8.jpg" alt="Gallery 8">
       </div>
     </section>
 
