--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       <h2>Galeri Sekolah</h2>
       <div class="gallery">
         <img src="1.jpg" alt="Gallery 1">
-        <img src="2.jpg  alt="Gallery 2">
+        <img src="2.jpg" alt="Gallery 2">
         <img src="3.jpg" alt="Gallery 3">
         <img src="4.jpg" alt="Gallery 4">
         <img src="5.jpg" alt="Gallery 5">
